--- a/index.html
+++ b/index.html
@@ -4,7 +4,22 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Photo Blog</title>
+        <!-- LINK CSS -->
         <link rel="stylesheet" href="./assets/css/style.css" />
+        <!-- LINK FONT CARD -->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner:wght@400..700&display=swap"
+            rel="stylesheet"
+        />
+        <!-- LINK FONT TITOLO -->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Sometype+Mono:ital,wght@0,400..700;1,400..700&display=swap"
+            rel="stylesheet"
+        />
     </head>
     <body>
         <header></header>
