--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Photo Blog</title>
+
+        <!-- LINK BOOTSTRAP -->
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
+            crossorigin="anonymous"
+        />
+
         <!-- LINK CSS -->
         <link rel="stylesheet" href="./assets/css/style.css" />
+
         <!-- LINK FONT CARD -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,6 +23,7 @@
             href="https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner:wght@400..700&display=swap"
             rel="stylesheet"
         />
+
         <!-- LINK FONT TITOLO -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -22,8 +33,23 @@
         />
     </head>
     <body>
-        <header></header>
-        <main></main>
+        <header>
+            <h1 class="fw-bolder">ESTATE '24</h1>
+        </header>
+        <main>
+            <div class="container">
+                <div class="row g-4 py-5 row-cols-3"></div>
+            </div>
+        </main>
+
+        <!-- SCRIPT JS -->
         <script src="./assets/js/main.js"></script>
+
+        <!-- SCRIPT BOOTSTRAP -->
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+            crossorigin="anonymous"
+        ></script>
     </body>
 </html>
