--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
         </header>
         <main>
             <div class="container">
-                <div class="row g-4 py-5 row-cols-3"></div>
+                <div
+                    class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 py-5"
+                ></div>
             </div>
         </main>
 
