create html + css modal

--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
                 ></div>
             </div>
         </main>
+        <div class="my-modal">
+            <div class="my-modal-content">
+                <button class="btn btn-warning close" type="button">
+                    CHIUDI
+                </button>
+            </div>
+        </div>
 
         <!-- SCRIPT JS -->
         <script src="./assets/js/main.js"></script>
