--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 <button class="btn btn-warning close" type="button">
                     CHIUDI
                 </button>
+                <img id="modal-img" src="" alt="" />
             </div>
         </div>
 
